--- a/application/templates/auth/registerform.html
+++ b/application/templates/auth/registerform.html
@@ -5,10 +5,10 @@
 <form method="POST", action="{{ url_for('auth_register') }}">
   <table>
     <tr>
-      <td>
+      <td style="padding:15px">
         {{ form.name.label }}
       </td>
-      <td>
+      <td style="padding:15px">
         {{ form.name }}
       </td>
       <td>
@@ -20,10 +20,10 @@
       </td>
     </tr>
     <tr>
-      <td>
+      <td style="padding:15px">
         {{ form.username.label }}
       </td>
-      <td>
+      <td style="padding:15px">
         {{ form.username }}
       </td>
       <td>
@@ -35,10 +35,10 @@
       </td>
     </tr>
     <tr>
-      <td>
+      <td style="padding:15px">
         {{ form.password.label }}
       </td>
-      <td>
+      <td style="padding:15px">
         {{ form.password }}
       </td>
       <td>
@@ -50,7 +50,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2">
+      <td style="padding:15px">
         <input type="submit" value="Register"/>
       </tr>
   </table>
