testing date querys

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,7 +1,19 @@
 {% extends "layout.html" %}
 
 {% block body %}
-  <p>
-  	Welcome to QuizBee!
-  </p>
+  <p style="padding:15px">Welcome to QuizBee!</p>
+  <table>
+    <tr>
+      <th style="padding:15px">Week statistics</th>
+    </tr>
+    <tr>
+      <th style="padding:15px">Most correct answers</th>
+    </tr>
+      {% for u in mostCorrectAnswers %}
+    <tr>
+      <td style="padding:15px">{{ u.username }}</td>
+      <td style="padding:15px">{{ u.answers }}</td>
+    </tr>
+      {% endfor %}
+  </table>    
 {% endblock %}
