--- a/application/templates/auth/registerform.html
+++ b/application/templates/auth/registerform.html
@@ -1,7 +1,12 @@
 {% extends "layout.html" %}
 
 {% block body %}
-{{ error }}
+<p style="padding:15px"><b>Welcome to join QuizBee!</b></p>
+<p style="padding:15px">QuizBee is a free application where you can play and make your own quizzes.</p>
+<p style="padding:15px">You can try your skills by answering random quiz questions even without registrating. If you want to play other users' quizzes, make your own questions and quizzes and gather points, you will need to create an account.</p>
+<p style="padding:15px">Except from the data you add to our quiz database or that is saved during playing in order to update your statistics, QuizBee won't collect any private data. All data related to you will be destroyed if you decide to delete your account.</p>
+<p style="padding:15px"><b>Create an account by giving the following information: </b></p>
+<p style="padding:15px">{{ error }}</p>
 <form method="POST", action="{{ url_for('auth_register') }}">
   <table>
     <tr>
